# AI-Command-Central

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: NATIVE_QA_2026-06-27.md  RELEASE.md  ROADMAP.md  THEME_SETTINGS.md  suncorp-sri-data-consumption-architecture-report.html
scripts/: report-writer.mjs  report-writer.test.mjs  verify-workflow-library.mjs
src/: App.tsx  backend.ts  data.ts  flow.ts  importedLibrary.ts  provider.ts  readiness.ts  seatAssignments.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_bridge.rs  commands.rs  db.rs  flow.rs  git.rs  launch.rs  lib.rs  main.rs  provider.rs  scan.rs  workflow_runner.rs
