[package]
name = "ai-command-central"
version = "0.1.0"
description = "Local-first command center for AI-assisted project work."
authors = ["Andrew Bruce"]
edition = "2021"

[lib]
name = "ai_command_central_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures = "0.3"
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"
